--- a/packages/build-utilities/package.json
+++ b/packages/build-utilities/package.json
@@ -13,5 +13,9 @@
     "tasks": "gulp --tasks"
   },
   "author": "Alexander J. Vincent <ajvincent@gmail.com>",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jasmine": "^5.3.0",
+    "prettier": "^3.3.3"
+  }
 }
