--- a/packages/v2-es-membrane/package.json
+++ b/packages/v2-es-membrane/package.json
@@ -10,13 +10,11 @@
     "node": ">=18.19"
   },
   "scripts": {
-    "gulp": "npm run gulp-clean && tsc --project ./tsconfig-gulp.json && node --expose-gc ../../node_modules/gulp/bin/gulp.js",
-    "gulp-clean": "node ./gulp-utilities/cleanTSC_output.js",
-    "gulp-tasks": "npm run gulp-clean && tsc --project ./tsconfig-gulp.json && gulp --tasks",
-    "build": "node --expose-gc --import ./register-hooks.js ./build.ts",
-    "debug": "node --inspect-brk --expose-gc --import ./register-hooks.js ./build.ts",
-    "build-tsimp": "node --expose-gc --import=tsimp/import --import ./build-utilities/loader-hooks/subpath/registration.js ./build.ts",
-    "tsimp-clean": "tsimp --clear"
+    "build": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js",
+    "debug": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js",
+    "tasks": "npm run clean && npm run tsc-buildsystem && gulp --tasks",
+    "clean": "node ./gulp-utilities/cleanTSC_output.js",
+    "tsc-buildsystem": "tsc --project ./tsconfig-gulp.json"
   },
   "repository": {
     "type": "git",
@@ -37,11 +35,8 @@
     "gulp": "^5.0.0",
     "jasmine": "^5.1.0",
     "mixin-decorators": "^1.0.1",
-    "prettier": "^3.3.3",
     "ts-morph": "^23.0.0",
     "ts-morph-structures": "^1.1.2",
-    "ts-node": "^10.9.2",
-    "tsimp": "^2.0.11",
     "tslib": "^2.6.3",
     "type-fest": "^4.20.1",
     "typescript": "^5.5.2"
@@ -51,7 +46,6 @@
     "#code_generation/*": "./_02_code_generation/*",
     "#objectgraph_handlers/*": "./_03_objectgraph_handlers/*",
     "#mirror_membranes/*": "./_04_mirror_membranes/*",
-    "#build-utilities/*": "./build-utilities/*",
     "#gulp-utilities/*": "./gulp-utilities/*"
   }
 }
