test current working directory

--- a/.github/workflows/tsm.build.stage-one.yml
+++ b/.github/workflows/tsm.build.stage-one.yml
@@ -3,7 +3,7 @@ on:
   push:
     paths:
       - 'projects/ts-morph-structures/*'
-      - '.github/workflows/**'
+      - '.github/workflows/tsm.build.*'
       - 'projects/ts-morph-structures/stage_0_references/**'
       - 'projects/ts-morph-structures/stage_1_snapshot/**'
       - 'projects/ts-morph-structures/utilities/**'
