--- a/.github/workflows/tsm.build.use-cases.yml
+++ b/.github/workflows/tsm.build.use-cases.yml
@@ -3,7 +3,7 @@ on:
   push:
     paths:
       - 'projects/ts-morph-structures/*'
-      - '.github/workflows/**'
+      - '.github/workflows/tsm.build.*'
       - 'projects/ts-morph-structures/stage_2_snapshot/snapshot/source/**'
       - 'projects/ts-morph-structures/use-cases/**'
 jobs:
