--- a/projects/ts-morph-structures/package.json
+++ b/projects/ts-morph-structures/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "clean": "node ./gulp-utilities/cleanTSC_output.js",
-    "tsc-buildsystem": "tsc --project ./tsconfig-gulp.json",
+    "tsc-buildsystem": "echo $PWD && tsc --project ./tsconfig-gulp.json",
     "build": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js",
     "debug": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js",
     "tasks": "npm run clean && npm run tsc-buildsystem && gulp --tasks",
