--- a/projects/ts-morph-structures/tsconfig.json
+++ b/projects/ts-morph-structures/tsconfig.json
@@ -8,6 +8,8 @@
     "sourceMap": true,
     "declaration": false,
 
+    "explainFiles": true,
+
     "baseUrl": ".",
     "paths": {
       "#stage_one/*": ["./stage_1_snapshot/*"],
