try not building child directories

--- a/projects/ts-morph-structures/tsconfig-gulp.json
+++ b/projects/ts-morph-structures/tsconfig-gulp.json
@@ -2,8 +2,6 @@
   "extends": "./tsconfig.json",
   "include": [
     "Gulpfile.ts",
-    "gulp-utilities/**/*.ts",
-    "*/pre-build/Gulpfile.ts",
-    "*/Gulpfile.ts"
+    "gulp-utilities/**/*.ts"
   ]
 }
