--- a/.github/workflows/disabled/tsm.build.stage-two.yml
+++ b/.github/workflows/disabled/tsm.build.stage-two.yml
@@ -8,6 +8,7 @@ on:
       - 'projects/ts-morph-structures/stage_2_**'
       - 'projects/ts-morph-structures/utilities/**'
       - 'projects/ts-morph-structures/dist/**'
+      - 'projects/ts-morph-structures/gulp-utilities/**'
 jobs:
   build-stage-two:
     runs-on: ubuntu-latest
