--- a/projects/ts-morph-structures/package.json
+++ b/projects/ts-morph-structures/package.json
@@ -15,17 +15,17 @@
   "scripts": {
     "clean": "node ./gulp-utilities/cleanTSC_output.js",
     "tsc-buildsystem": "echo $PWD && tsc --project ./tsconfig-gulp.json",
-    "build": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js",
-    "debug": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js",
+    "build": "npm run clean && npm run tsc-buildsystem && gulp",
+    "debug": "npm run clean && npm run tsc-buildsystem && node --inspect-brk ../../node_modules/gulp/bin/gulp.js",
     "tasks": "npm run clean && npm run tsc-buildsystem && gulp --tasks",
-    "build-stage-one": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js stage_one",
-    "build-stage-two": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js stage_two",
-    "build-stage-three": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js stage_three",
-    "use-cases": "npm run clean && npm run tsc-buildsystem && node --expose-gc ../../node_modules/gulp/bin/gulp.js use_cases",
-    "debug-stage-one": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js stage_one",
-    "debug-stage-two": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js stage_two",
-    "debug-stage-three": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js stage_three",
-    "debug-use-cases": "npm run clean && npm run tsc-buildsystem && node --inspect-brk --expose-gc ../../node_modules/gulp/bin/gulp.js use-cases",
+    "build-stage-one": "npm run clean && npm run tsc-buildsystem && gulp stage_one",
+    "build-stage-two": "npm run clean && npm run tsc-buildsystem && gulp stage_two",
+    "build-stage-three": "npm run clean && npm run tsc-buildsystem && gulp stage_three",
+    "use-cases": "npm run clean && npm run tsc-buildsystem && gulp use_cases",
+    "debug-stage-one": "npm run clean && npm run tsc-buildsystem && node --inspect-brk ../../node_modules/gulp/bin/gulp.js stage_one",
+    "debug-stage-two": "npm run clean && npm run tsc-buildsystem && node --inspect-brk ../../node_modules/gulp/bin/gulp.js stage_two",
+    "debug-stage-three": "npm run clean && npm run tsc-buildsystem && node --inspect-brk ../../node_modules/gulp/bin/gulp.js stage_three",
+    "debug-use-cases": "npm run clean && npm run tsc-buildsystem && node --inspect-brk ../../node_modules/gulp/bin/gulp.js use-cases",
     "is-repo-clean": "npm run clean && npm run tsc-buildsystem && node ./gulp-utilities/assertRepoIsClean.js",
     "diff-stages": "diff -p -U 8 -N -r ./stage_2_snapshot/snapshot/source ./stage_3_integration/snapshot/source"
   },
