--- a/projects/build-utilities/package.json
+++ b/projects/build-utilities/package.json
@@ -15,8 +15,12 @@
   "author": "Alexander J. Vincent <ajvincent@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.17.0",
     "jasmine": "^5.5.0",
-    "prettier": "^3.4.2"
+    "prettier": "^3.4.2",
+    "typescript-eslint": "^8.19.0"
   },
   "dependencies": {
     "which": "^5.0.0"
