tsm-structures depends on mixin-decorators

--- a/.github/workflows/tsm.build.stage-three.yml
+++ b/.github/workflows/tsm.build.stage-three.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - '.github/workflows/tsm.build.*'
       - 'projects/build-utilities/**'
+      - 'projects/mixin-decorators/**'
       - 'projects/ts-morph-structures/*'
       - 'projects/ts-morph-structures/gulp-utilities/**'
       - 'projects/ts-morph-structures/stage_2_snapshot/snapshot/**'
