--- a/.github/workflows/tsm.build.stage-two.yml
+++ b/.github/workflows/tsm.build.stage-two.yml
@@ -4,6 +4,7 @@ on:
     paths:
       - '.github/workflows/tsm.build.*'
       - 'projects/build-utilities/**'
+      - 'projects/mixin-decorators/**'
       - 'projects/ts-morph-structures/*'
       - 'projects/ts-morph-structures/dist/**'
       - 'projects/ts-morph-structures/gulp-utilities/**'
