--- a/projects/mixin-decorators/.gitignore
+++ b/projects/mixin-decorators/.gitignore
@@ -1,8 +1,14 @@
 node_modules
+*.js
+*.d.ts
+*.js.map
 **/*.js
 **/*.js.map
 **/*.d.ts
-**/*.d.ts.map
+dist/fixtures
+dist/spec
+!dist/source/**/*.js
+!dist/source/**/*.d.ts
 !fixtures/**/types/**/*.d.ts
 !source/**/types/**/*.d.ts
 !source/MultiMixinBuilder.js
