--- a/.github/workflows/tsm.build.stage-one.yml
+++ b/.github/workflows/tsm.build.stage-one.yml
@@ -11,7 +11,7 @@ on:
       - 'projects/ts-morph-structures/stage_1_snapshot/**'
       - 'projects/ts-morph-structures/utilities/**'
 jobs:
-  build-stage-one:
+  build:
     runs-on: ubuntu-latest
     defaults:
       run:
