--- a/projects/mixin-decorators/package.json
+++ b/projects/mixin-decorators/package.json
@@ -12,7 +12,8 @@
     "clean": "rm -rf dist Gulpfile.js",
     "tsc-buildsystem": "echo $PWD && tsc --project ./tsconfig-gulp.json",
     "build": "npm run clean && npm run tsc-buildsystem && node --no-experimental-require-module ../../node_modules/gulp/bin/gulp.js",
-    "tasks": "npm run clean && npm run tsc-buildsystem && node --no-experimental-require-module ../../node_modules/gulp/bin/gulp.js --tasks"
+    "tasks": "npm run clean && npm run tsc-buildsystem && node --no-experimental-require-module ../../node_modules/gulp/bin/gulp.js --tasks",
+    "is-repo-clean": "npm run clean && npm run tsc-buildsystem && node --no-experimental-require-module ./gulp-utilities/assertRepoIsClean.js"
   },
   "repository": {
     "type": "git",
