--- a/projects/mixin-decorators/package.json
+++ b/projects/mixin-decorators/package.json
@@ -36,6 +36,7 @@
     "@types/jasmine": "^5.1.5",
     "@types/node": "^18.19.69",
     "eslint-plugin-json": "^3.1.0",
+    "gulp": "^5.0.0",
     "jasmine": "^5.5.0",
     "typescript": "^5.7.2"
   },
