--- a/projects/mixin-decorators/package.json
+++ b/projects/mixin-decorators/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@ajvincent/build-utilities": "file:../build-utilities",
     "@tsconfig/node18": "^18.2.4",
+    "@types/gulp": "^4.0.17",
     "@types/jasmine": "^5.1.5",
     "@types/node": "^18.19.69",
     "eslint-plugin-json": "^3.1.0",
