reduce exposed files

--- a/.github/workflows/tsm.build.stage-two.yml
+++ b/.github/workflows/tsm.build.stage-two.yml
@@ -4,7 +4,8 @@ on:
     paths:
       - '.github/workflows/tsm.build.*'
       - 'projects/build-utilities/**'
-      - 'projects/mixin-decorators/**'
+      - 'projects/mixin-decorators/*'
+      - 'projects/mixin-decorators/dist/source/**'
       - 'projects/ts-morph-structures/*'
       - 'projects/ts-morph-structures/dist/**'
       - 'projects/ts-morph-structures/gulp-utilities/**'
