--- a/.github/workflows/tsm.build.use-cases.yml
+++ b/.github/workflows/tsm.build.use-cases.yml
@@ -4,7 +4,8 @@ on:
     paths:
       - '.github/workflows/tsm.build.*'
       - 'projects/build-utilities/**'
-      - 'projects/mixin-decorators/**'
+      - 'projects/mixin-decorators/*'
+      - 'projects/mixin-decorators/dist/source/**'
       - 'projects/ts-morph-structures/*'
       - 'projects/ts-morph-structures/stage_2_snapshot/snapshot/source/**'
       - 'projects/ts-morph-structures/use-cases/**'
