--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,11 @@
     "projects/mixin-decorators/Gulpfile.js": true,
     "projects/mixin-decorators/Gulpfile.js.map": true,
 
+    "projects/reference-tracking/**/*.js": { "when": "$(basename).ts"},
+    "projects/reference-tracking/**/*.js.map": true,
+    "projects/reference-tracking/Gulpfile.js": true,
+    "projects/reference-tracking/Gulpfile.js.map": true,
+
     "projects/ts-morph-structures/stage_*/**/*.js": { "when": "$(basename).ts"},
     "projects/ts-morph-structures/stage_*/**/*.js.map": true,
     "projects/ts-morph-structures/use-cases/**/*.js": { "when": "$(basename).ts"},
