--- a/.github/workflows/tsm.build.use-cases.yml
+++ b/.github/workflows/tsm.build.use-cases.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '^22.13'
       - run: npm ci
       - run: npm run use-cases
         timeout-minutes: 5
