Reference tracking definitions in pseudo-code for AST parsing.

--- a/projects/reference-tracking/package.json
+++ b/projects/reference-tracking/package.json
@@ -26,5 +26,8 @@
     "@types/node": "^18.19.69",
     "gulp": "^5.0.0",
     "typescript": "^5.7.2"
+  },
+  "dependencies": {
+    "type-fest": "^4.32.0"
   }
 }
