Define reference-spec, search driver classes.

--- a/projects/reference-tracking/tsconfig.json
+++ b/projects/reference-tracking/tsconfig.json
@@ -16,6 +16,7 @@
     "fixtures/**/*.ts",
     "playground/**/*.ts",
     "source/**/*.ts",
+    "reference-spec/**/*.ts",
     "spec/**/*.ts"
   ],
 
