--- a/projects/reference-tracking/package.json
+++ b/projects/reference-tracking/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "@engine262/engine262": "^0.0.1-dd05c163162914b12baca4fbabb6e9ce99a217bc",
+    "import-meta-resolve": "^4.1.0",
     "type-fest": "^4.32.0"
   }
 }
