It was raining that night... a hard rain...

--- a/projects/reference-tracking/package.json
+++ b/projects/reference-tracking/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ajvincent/reference-tracking",
+  "name": "dixonhill",
   "version": "1.0.0",
   "description": "JavaScript reference tracking by static analysis.  For libraries to test they don't leak memory directly.",
   "main": "dist/bin/exports.js",
