--- a/projects/reference-tracking/package.json
+++ b/projects/reference-tracking/package.json
@@ -29,7 +29,9 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@dagrejs/dagre": "^1.1.4",
     "@engine262/engine262": "^0.0.1-dd05c163162914b12baca4fbabb6e9ce99a217bc",
+    "d3": "^7.9.0",
     "import-meta-resolve": "^4.1.0",
     "type-fest": "^4.32.0"
   }
