--- a/projects/reference-tracking/package.json
+++ b/projects/reference-tracking/package.json
@@ -1,10 +1,9 @@
 {
   "name": "es-search-references",
-  "version": "1.0.0",
+  "version": "1.0.0-beta.1",
   "description": "JavaScript reference tracking by static analysis.  For libraries to test they don't leak memory directly.",
   "main": "dist/bin/exports.js",
   "typings": "dist/bin/exports.d.ts",
-  "private": true,
   "type": "module",
   "engines": {
     "node": ">=22.13"
