--- a/projects/reference-tracking/package.json
+++ b/projects/reference-tracking/package.json
@@ -1,6 +1,6 @@
 {
   "name": "es-search-references",
-  "version": "1.0.0-beta.1",
+  "version": "1.0.0",
   "description": "JavaScript reference tracking by static analysis.  For libraries to test they don't leak memory directly.",
   "main": "dist/bin/exports.js",
   "typings": "dist/bin/exports.d.ts",
@@ -32,5 +32,8 @@
     "@engine262/engine262": "^0.0.1-541a5631dee2e95603eb0b195c572aed6e2a244f",
     "import-meta-resolve": "^4.1.0",
     "type-fest": "^4.32.0"
+  },
+  "peerDependencies": {
+    "es-search-references-guest": "^1.0.0"
   }
 }
