--- a/projects/search-references/package.json
+++ b/projects/search-references/package.json
@@ -48,12 +48,12 @@
     "@types/jasmine": "^5.1.5",
     "@types/node": "^18.19.69",
     "gulp": "^5.0.0",
+    "type-fest": "^4.40.0",
     "typescript": "^5.7.2"
   },
   "dependencies": {
     "@dagrejs/graphlib": "^2.2.4",
     "@engine262/engine262": "^0.0.1-0bd9a5fb33988b1e4a3a7bc9560c242fa8fe7393",
-    "import-meta-resolve": "^4.1.0",
-    "type-fest": "^4.32.0"
+    "import-meta-resolve": "^4.1.0"
   }
 }
