--- a/projects/search-references/package.json
+++ b/projects/search-references/package.json
@@ -48,6 +48,8 @@
     "@types/jasmine": "^5.1.5",
     "@types/node": "^18.19.69",
     "gulp": "^5.0.0",
+    "rollup": "^4.40.0",
+    "rollup-plugin-dts": "^6.2.1",
     "type-fest": "^4.40.0",
     "typescript": "^5.7.2"
   },
